# msbp-tg

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  FINAL_STEP10_PRACTICAL_IMPLICATIONS_REPORT.md  FINAL_STEP11_DOI_INSERTION_REPORT.md  FINAL_STEP8_FILENAME_REFERENCE_CLEANUP_REPORT.md  FINAL_STEP9_METADATA_SCRUB_REPORT.md  JOURNAL_PACKAGE_REPORT.md  LICENSE  README.md  README_STEP13_PERIODIC_GATE_PATCH.md  README_STEP14_ADVANCED_PERIODIC_GATE_PATCH.md  README_STEP15_PMSBP_REANALYSIS_AUDIT_PATCH.md  README_STEP16_OPEN_ROW_LEVEL_DATASET_GATE_PATCH.md  README_STEP17_PSMILES_PARSER_EXTENSION_GATE_PATCH.md  README_STEP18_OPEN_DATA_PMSBP_REANALYSIS_PATCH.md  README_STEP19_COMPARATOR_DESCRIPTOR_EVIDENCE_HARDENING_PATCH.md  RELEASE_NOTES.md  SHA256_MANIFEST_STEP13.csv  SHA256_MANIFEST_STEP14.csv  SHA256_MANIFEST_STEP15.csv  SHA256_MANIFEST_STEP16.csv  SHA256_MANIFEST_STEP17.csv  SHA256_MANIFEST_STEP18.csv  SHA256_MANIFEST_STEP19.csv  environment.yml  pyproject.toml  release_notes_v1.0.1.txt  reproduce.sh  requirements.txt
data/: README_data_public_safe.md  external_sources.csv  external_sources.md  license_audit.md  manifest.csv  manifest_stage13_source_manifest.csv  source_screening_audit_stage13.csv
docs/: JOURNAL_REPRODUCIBILITY_AUDIT.md  REPRODUCIBILITY.md  STEP10_GITHUB_ZENODO_RELEASE_WORKFLOW_REPORT.md  STEP13_PERIODIC_MSBP_DESCRIPTOR_GATE_REPORT.md  STEP14_ADVANCED_PERIODIC_INVARIANCE_GATE_REPORT.md  STEP15_PMSBP_REANALYSIS_AUDIT_REPORT.md  STEP16_OPEN_ROW_LEVEL_DATASET_GATE_REPORT.md  STEP17_PSMILES_PARSER_EXTENSION_GATE_REPORT.md  claim_boundary.md  (+44 more)
(+116 files in other folders)
