[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "msbp-tg"
version = "0.1.0"
description = "Public-safe reproducibility package for MSBP-Tg"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Htet Ko Ko Naing" }
]
keywords = [
  "polymer",
  "glass transition",
  "Tg",
  "rotatable bonds",
  "reproducibility"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "rdkit>=2023.9.1",
  "openpyxl>=3.1",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
